[workspace]
resolver = "2"
members = ["dstu4145-rust", "poly_algebra", "rust-ec"]

[workspace.dependencies]
poly_algebra = { path = "./poly_algebra" }
rust-ec = { path = "./rust-ec" }
num-traits = "0.2"
num-bigint = "0.4.6"
signature = { version = "2.2.0", features = ["rand_core",  "digest", "std"] }
thiserror = "1.0.64"
rand_chacha = { version = "0.3.1"}
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha3 = "0.10.8"