[package]
name = "dstu4145-rust"
version = "0.1.0"
edition = "2021"
description = "Rust-native library for calulating specific DSTU 4145-2002 sign."
readme = "Readme.md"
rust-version = "1.81.0"
authors = ["Illia Kripaka"]
repository = "https://github.com/ikripaka/dstu4145-rust/poly-algebra"
keywords = ["cryptography", "dstu4145", "digital-signature"]
categories = ["cryptography"]

[dependencies]
signature.workspace = true
poly_algebra.workspace = true
rust-ec.workspace = true
num-traits.workspace = true
num-bigint.workspace = true
thiserror.workspace = true
rand_chacha.workspace = true
sha3.workspace = true
bytes.workspace = true

[dev-dependencies]
hex-literal.workspace = true
proptest.workspace = true