[package]
name = "rust-ec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poly_algebra.workspace = true
num-traits.workspace = true
num-bigint.workspace = true
thiserror.workspace = true
rand_core.workspace = true

[dev-dependencies]
rand_chacha.workspace = true