[package]
name = "rust-ec"
version = "0.1.0"
edition = "2021"
description = "Rust-native library for using spesific EC in binary field arithmetic for DSTU 4145-2002."
readme = "Readme.md"
rust-version = "1.81.0"
authors = ["Illia Kripaka"]
repository = "https://github.com/ikripaka/dstu4145-rust/poly-algebra"
keywords = ["cryptography", "binary-field", "koblitz-curve", "digital-signature"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poly_algebra.workspace = true
num-traits.workspace = true
num-bigint.workspace = true
thiserror.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true

[dev-dependencies]
proptest.workspace = true